# var

./: Data-ByteArraySlice-Unsafe.html  Data-ByteArraySlice.html  Data-Tuple-IO.html  Data-Tuple-ITuple-Lens.html  Data-Tuple-ITuple.html  Data-Tuple-MTuple.html  Data-Tuple-ST.html  Data-Tuple-Storable.html  Data-Var-Class.html  Data-Var-IO.html  Data-Var-ST.html  Data-Var-Storable.html  Data-Var.html  LICENSE  README.md  doc-index.html  index-frames.html  index.html  mini_Data-ByteArraySlice-Unsafe.html  mini_Data-ByteArraySlice.html  mini_Data-Tuple-IO.html  mini_Data-Tuple-ITuple-Lens.html  mini_Data-Tuple-ITuple.html  mini_Data-Tuple-MTuple.html  mini_Data-Tuple-ST.html  mini_Data-Tuple-Storable.html  mini_Data-Var-Class.html  mini_Data-Var-IO.html  mini_Data-Var-ST.html  mini_Data-Var-Storable.html  mini_Data-Var.html  ref.cabal  var.cabal  var.haddock
benchmarks/: boxed.hs  mean.hs  mutable.hs  unboxed.hs  user.hs
src/: Control-Monad-Prim-Class.html  Control-Monad-Prim.html  Data-ByteArrayElem-Unsafe.html  Data-ByteArraySlice-Unsafe.html  Data-ByteArraySlice.html  Data-IOVar.html  Data-Prim-Array.html  Data-Prim-ByteArray.html  Data-Proxy.html  Data-STVar.html  Data-TVar.html  Data-Tuple-Array.html  Data-Tuple-ByteArray.html  Data-Tuple-IO.html  Data-Tuple-ITuple-Lens.html  Data-Tuple-ITuple-Proxy.html  Data-Tuple-ITuple.html  Data-Tuple-MTuple.html  Data-Tuple-ST.html  Data-Tuple-Storable.html  Data-Var-ByteArray.html  Data-Var-Class.html  Data-Var-IO.html  Data-Var-ST.html  Data-Var-Storable.html  Data-Var.html  Type-List.html  Type-Nat.html
src/Control/Monad/: Prim.hs
src/Control/Monad/Prim/: Class.hs
src/Data/: ByteArraySlice.hs  IOVar.hs  Proxy.hs  Ref.hs  STVar.hs  TVar.hs  Var.hs
src/Data/ByteArrayElem/: Unsafe.hs
src/Data/ByteArraySlice/: Unsafe.hs
src/Data/Prim/: Array.hs  ByteArray.hs
src/Data/Ref/: ByteArray.hs  Class.hs  IO.hs  ST.hs  Storable.hs
src/Data/Tuple/: Array.hs  ByteArray.hs  Class.hs  Fields.hs  IO.hs  ITuple.hs  MTuple.hs  ST.hs  Storable.hs
src/Data/Tuple/Fields/: Extra.hs  Proxy.hs  Unsafe.hs
src/Data/Tuple/ITuple/: Lens.hs  Proxy.hs
src/Data/Var/: Array.hs  ByteArray.hs  ByteArrayElem.hs  ByteArraySlice.hs  Class.hs  Generics.hs  IO.hs  ST.hs  STM.hs  Storable.hs  Traversable.hs  Tuple.hs
src/Type/: List.hs  Nat.hs
tests/: properties.hs
