name:                ref
version:             0.1.0.0
synopsis:            Mutable references
description:
  This package defines the class 'Ref' of references mutable within appropriate
  monads, as well as some instances of this class.
homepage:            http://github.com/sonyandy/ref
bug-reports:         http://github.com/sonyandy/ref/issues
copyright:           Copyright (C) 2013 Andy Sonnenburg
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/sonyandy/ref.git

library
  hs-source-dirs: src
  exposed-modules:
    Data.Ref
    Data.Ref.Class
    Data.Ref.IO
    Data.Ref.ST
    Data.Ref.Storable
  other-modules:
    Data.Ref.ByteArray
  build-depends:
    base >= 4 && < 5,
    transformers
  other-extensions:
    CPP,
    DeriveDataTypeable,
    FlexibleInstances,
    MagicHash,
    MultiParamTypeClasses,
    Rank2Types,
    Trustworthy,
    TypeFamilies,
    UnboxedTuples
  ghc-options: -Wall -fwarn-tabs -O2
