name:                var
version:             0.1.0.0
synopsis:            Mutable variables
description:
  This package defines the class 'Var' of variables mutable within appropriate
  monads, as well as some instances of this class.
homepage:            http://github.com/sonyandy/ref
bug-reports:         http://github.com/sonyandy/ref/issues
copyright:           Copyright (C) 2013 Andy Sonnenburg
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/sonyandy/var.git

flag safe-ST
flag strict-modifyRef

library
  hs-source-dirs: src
  exposed-modules:
    Data.Var
    Data.Var.Class
    Data.Var.IO
    Data.Var.ST
    Data.Var.Storable
  other-modules:
    Control.Monad.Prim.Class
    Data.Proxy
    Data.Var.Array
    Data.Var.ByteArray
    Data.Var.Tuple
  build-depends:
    base >= 4 && < 5,
    transformers
  if flag(safe-ST)
    build-depends: base >= 4.4
    cpp-options: -DMODULE_Control_Monad_ST_Safe
  if flag(strict-modifyRef)
    build-depends: base >= 4.6
    cpp-options: -DFUNCTION_Data_IORef_modifyRef_ -DFUNCTION_Data_STRef_modifyRef_
  if impl(ghc >= 7.2)
    other-extensions: Trustworthy
    cpp-options: -DLANGUAGE_DefaultSignatures -DLANGUAGE_Trustworthy
  if impl(ghc < 7.6)
    build-depends: ghc-prim
  other-extensions:
    CPP,
    DeriveDataTypeable,
    FlexibleInstances,
    MagicHash,
    MultiParamTypeClasses,
    TypeFamilies,
    UnboxedTuples
  ghc-options: -Wall -fwarn-tabs -O2
