name:                var
version:             0.1.0.0
synopsis:            Mutable variables
description:
  This package defines the class 'Var' of variables mutable within appropriate
  monads, as well as some instances of this class.
homepage:            http://github.com/sonyandy/ref
bug-reports:         http://github.com/sonyandy/ref/issues
copyright:           Copyright (C) 2013 Andy Sonnenburg
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/sonyandy/var.git

flag safe-ST
flag strict-modifyRef

library
  hs-source-dirs: src
  exposed-modules:
    Data.Var
    Data.Var.ByteArrayElem
    Data.Var.Class
    Data.Var.IO
    Data.Var.ST
    Data.Var.Storable
    Data.Var.Traversable
  other-modules:
    Control.Monad.Prim.Class
    Data.IOVar
    Data.Proxy
    Data.STVar
    Data.Var.Array
    Data.Var.ByteArray
  build-depends:
    base >= 4 && < 5,
    transformers
  if flag(safe-ST)
    build-depends: base >= 4.4
    cpp-options: -DMODULE_Control_Monad_ST_Safe
  if flag(strict-modifyRef)
    build-depends: base >= 4.6
    cpp-options: -DFUNCTION_Data_IORef_modifyRef_ -DFUNCTION_Data_STRef_modifyRef_
  if impl(ghc >= 7.2)
    other-extensions: Trustworthy
    cpp-options: -DLANGUAGE_Trustworthy
  if impl(ghc >= 7.2)
    cpp-options: -DLANGUAGE_DefaultSignatures 
  if impl(ghc >= 7.2 && < 7.6)
    build-depends: ghc-prim
  if impl(ghc >= 7.6)
    cpp-options: -DDEPRECATED_Par0
  other-extensions:
    CPP,
    DeriveDataTypeable,
    FlexibleInstances,
    FlexibleContexts,
    FunctionalDependencies,
    MagicHash,
    MultiParamTypeClasses,
    Rank2Types,
    TypeFamilies,
    TypeOperators,
    UnboxedTuples,
    UndecidableInstances
  ghc-options: -Wall -fwarn-tabs -O2
